--- a/coverage.html
+++ b/coverage.html
@@ -107,9 +107,21 @@
             </td>
             <td>injectable</td>
             <td>AuthService</td>
-            <td align="right" data-sort="61">
-                <span class="coverage-percent">61 %</span>
-                <span class="coverage-count">(13/21)</span>
+            <td align="right" data-sort="65">
+                <span class="coverage-percent">65 %</span>
+                <span class="coverage-count">(15/23)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/ResetPasswordComponent.html">src/app/auth/email/reset-password/reset-password.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>ResetPasswordComponent</td>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(3/9)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -127,13 +139,25 @@
         <tr class="medium">
             <td>
                 <!-- miscellaneous -->
+                <a href="./components/ForgotPasswordComponent.html">src/app/auth/forgot-password/forgot-password.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>ForgotPasswordComponent</td>
+            <td align="right" data-sort="37">
+                <span class="coverage-percent">37 %</span>
+                <span class="coverage-count">(3/8)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./components/LoginComponent.html">src/app/auth/login/login.component.ts</a>
             </td>
             <td>component</td>
             <td>LoginComponent</td>
-            <td align="right" data-sort="50">
-                <span class="coverage-percent">50 %</span>
-                <span class="coverage-count">(4/8)</span>
+            <td align="right" data-sort="40">
+                <span class="coverage-percent">40 %</span>
+                <span class="coverage-count">(4/10)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -302,6 +326,18 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/ModalComponent.html">src/app/components/modal/modal.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>ModalComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
             </td>
         </tr>
         <tr class="medium">
